# pipe-T

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  draft.cpp  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  main.cpp  new.tcc  notes  waiting_list.cpp  worker.cpp
docs/: Doxyfile.in  mainpage.md  mainpage_new.md
examples/basic/01-simplest/: simplest.cpp
examples/basic/02-discriminate/: discriminate.cpp
examples/basic/03-lexic/: lexic.cpp
inc/: .basic_pipeline.tcc.swp  basic_pipeline.tcc  fork_junction.tcc  manifold.tcc  pipe-t-error.hpp  pipeline.tcc  pipet.tcc
include/: dag.tcc  pipe-t.tcc  pipeline.tcc
test/: .manifold.cpp.swp  CMakeLists.txt  basic.cpp  forkJunction.cpp  handler.cpp  lexical.cpp  lexics.cpp  manifold.cpp  pipeline.cpp  tstStubs.hpp
